--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <label for="email">email: </label><input type="email" name="email" required>
         <label for="message">message: </label><textarea name="message"></textarea>
         <button type="submit">submit</button>
-        <input type="hidden" name="_next" value="http://thankyou.html">
+        <input type="hidden" name="_next" value="thankyou.html">
     </form>
 
    <footer>
