--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,12 @@
     </section>
     <hr>
     <form class="one-col" action="https://formsubmit.co/2265cd9f5ff95ba19c0ecd8d8d667392" method="POST">
+        <input type="hidden" name="_captcha" value="false">
         <label for="name">name:</label><input type="text" name="name" required>
         <label for="email">email: </label><input type="email" name="email" required>
         <label for="message">message: </label><textarea name="message"></textarea>
         <button type="submit">submit</button>
-        <input type="hidden" name="_next" value="https://biggymtim.github.io/thankyou.html">
+        <input type="hidden" name="_next" value="http://127.0.0.1:5500/thankyou.html">
     </form>
 
    <footer>
