--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <label for="email">email: </label><input type="email" name="email" required>
         <label for="message">message: </label><textarea name="message"></textarea>
         <button type="submit">submit</button>
-        <input type="hidden" name="_next" value="http://127.0.0.1:5500/thankyou.html">
+        <input type="hidden" name="_next" value="https://biggymtim.github.io/thankyou.html">
     </form>
 
    <footer>
