--- a/contact.html
+++ b/contact.html
@@ -7,27 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
 </head>
-<body>
+<body class="contact-body">
 
     <nav>
         <p>Timothy Fievet</p>
         <p><a href="index.html">About Timothy Fievet</a></p>   
     </nav>
-    <section>
+    <section class="contact-nav">
         <h1>Contact Timothy Fievet</h1>
         <p>105 Hooper Street, Athens GA &#x2022 404-405-5942 &#x2022 tjf31083@uga.edu</p>
     </section>
     <hr>
+    
     <form class="one-col" action="https://formsubmit.co/2265cd9f5ff95ba19c0ecd8d8d667392" method="POST">
         <input type="hidden" name="_captcha" value="false">
         <label for="name">name:</label><input type="text" name="name" required>
         <label for="email">email: </label><input type="email" name="email" required>
         <label for="message">message: </label><textarea name="message"></textarea>
         <button type="submit">submit</button>
-        <input type="hidden" name="_next" value="https://biggymtim.github.io/thankyou.html">
+        <input type="hidden" name="_next" value="http://127.0.0.1:5500/thankyou.html">
     </form>
 
-   <footer>
+   <footer class="anchor-footer">
     <a href="index.html">  &copy; Timothy Fievet</a>
     <a href="https://www.linkedin.com/in/timothy-fievet-563492223/"><i class="fab fa-linkedin" ></i></a>
     </footer>
