--- a/thankyou.html
+++ b/thankyou.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank you!</title>
@@ -20,7 +20,7 @@
     <hr>
     
     
-    <footer>
+    <footer class="anchor-footer">
         <a href="index.html">  &copy; Timothy Fievet</a>
         <a href="https://www.linkedin.com/in/timothy-fievet-563492223/"><i class="fab fa-linkedin" ></i></a>
     </footer>
